@@ -1,3 +1,9 @@
+2019-05-18  Iain Sandoe  <iain@sandoe.co.uk>
+
+	PR target/63891
+	* gcc.dg/darwin-weakimport-3.c: Adjust options and explain
+	the reasons.
+
 2019-05-21  Uroš Bizjak  <ubizjak@gmail.com>
 
 	* gcc.target/i386/vect-signbitf.c: New test.
